# Tauri

./: .gitignore  LICENSE
Tauri_teste/: package-lock.json  package.json
Tauri_teste/src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/: .gitignore
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs  openness.rs
src/components/: Greet.vue
